--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
 
 <body>
   <main>
-    <img class="illustration" src="assets/images/illustration-article.svg" alt="illustration-article">
-    <div class="card">
-      <p class="learning">Learning</p>
-      <p class="date">Published 20 nov 2024</p>
-      <h1>HTML & CSS foundations</h1>
-      <p class="para">These languages are the backbone of every website, defining structure, content,
-        and presentation.
-      </p>
-    </div>
-    <div class="profile">
-      <img class="dp" src="assets/images/cat_dp.jpg" alt="cat dp">
-      <span>Zayed Shaikh</span>
+    <div>
+      <div class="thumbnail">
+        <img class="illustration" src="assets/images/illustration-article.svg" alt="illustration-article">
+      </div>
+      <div class="card">
+        <p class="learning">Learning</p>
+        <p class="date">Published 20 nov 2024</p>
+        <h1>HTML & CSS foundations</h1>
+        <p class="para">These languages are the backbone of every website, defining structure, content,
+          and presentation.
+        </p>
+      </div>
+      <div class="profile">
+        <img class="dp" src="assets/images/cat_dp.jpg" alt="cat dp">
+        <span>Zayed Shaikh</span>
+      </div>
     </div>
   </main>
 </body>
